--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: go
 go:
   - "1.10"
+services:
+      - postgresql
+
+before_script:
+    - psql -c 'create database gofixtures_test'; -U postgres
+
+env:
+    global:
+    - GOFIXTURES_TEST_DB_NAME: gofixtures_test
+    - GOFIXTURES_TEST_DB_USER: postgres
+    - GOFIXTURES_TEST_DB_PASSWORD: postgres
+    - GOFIXTURES_TEST_DB_HOST: localhost
