--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
       - postgresql
 
 before_script:
-    - psql -c 'create database gofixtures_test'; -U postgres
+    - psql -c 'create database gofixtures_test;' -U postgres
 
 env:
     global:
