--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -2,7 +2,6 @@ resources:
   - name: code
     type: git
     source: {url: 'https://github.com/ishehata/gofixtures'}
-    check_every: 30
 
 jobs:
 - name: test
@@ -11,12 +10,16 @@ jobs:
       trigger: true
     - task:  test
       file: tasks/test.yml
+      on_success:
+        task: build
+        file: tasks/build.yml
 
-- name: build
-  plan:
-  - get: code
-    trigger: true
-  - task: build
-    file: tasks/build.yml
+        
+        #- name: build
+        #  plan:
+        #  - get: code
+        #    trigger: true
+        #  - task: build
+        #    file: tasks/build.yml
     
 
