--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,7 +1,7 @@
 resources:
   - name: code
     type: git
-    source: {url: 'https://github.com/ishehata/gofixtures'}
+    source: {uri: 'https://github.com/ishehata/gofixtures'}
 
 jobs:
 - name: test
