--- a/ci/tasks/lint.yml
+++ b/ci/tasks/lint.yml
@@ -5,7 +5,7 @@ image_resource:
     type: docker-image
     source:
         repository: golang
-        tag: alpine
+        tag: latest
 
 inputs:
     - name: code
