--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -14,6 +14,7 @@ jobs:
 - name: test
   plan:
     - get: code
+      passed: [lint]
       trigger: true
     - task:  test
       file: code/ci/tasks/test.yml
