Added sonar script to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+
 language: go
 go:
   - "1.11"
@@ -13,3 +15,15 @@ env:
     - GOFIXTURES_TEST_DB_USER: postgres
     - GOFIXTURES_TEST_DB_PASSWORD: postgres
     - GOFIXTURES_TEST_DB_HOST: localhost
+
+sonar.projectKey=schehata_garson
+# this is the name and version displayed in the SonarCloud UI.
+sonar.projectName=garson
+sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# This property is optional if sonar.modules is set.
+sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
